fix: data table spacing

--- a/src/_table.scss
+++ b/src/_table.scss
@@ -1,7 +1,7 @@
 ﻿// Tables
 .DataTable {
     tr > th, tr > td {
-        padding: 0 2px;
+        padding: 0 2px !important;
         border-top: none !important;
     }
 
